--- a/Repaso-Clase12/Blog/Blog.Entidades/Blog.Entidades.csproj
+++ b/Repaso-Clase12/Blog/Blog.Entidades/Blog.Entidades.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Excepciones\ValidacionNegocioException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Utilidades\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
